development version
-------------------

----- cvs ci ------
Fri Apr 14 16:54:02 MSD 2000
max (patch from Serguei Revtov):
* memory leak in write_sqidx()

----- cvs ci ------
Fri Apr  7 15:25:58 MSD 2000
max (patch from Serguei Revtov):
* MsgReadMsg now sets last character of text & ctext to '\0'

----- cvs ci ------
Sat Apr 1 13:40:17 MSD 2000
Fedor:
* fixed logical error (&&, ||) in Jam_Close()

----- cvs ci ------
Fr  31 Mar 2000 17:53:23 CEST
tobi (patches mostly from Alex S. Aganichev)
* Modified the routines in fexist.c to use stat() if available, instead
  of opendir/readdir/closedir. This should speed up things a lot and also 
  produce more reliable results.
* Some small corrections in compiler.h for various compilers.
* Fixed flush_handle2 for DJGPP and for RSXNT (the RSXNT code previously
  did use wrong handle numbers, which could produce very interesting
  results ...)
* Accelerated patmat routine for sequences with multiple wildcards.
* Added shareloaded function for DJGPP.

----- cvs ci ------
Mon Mar 20 08:56:28 MSK 2000
max (patch from Serguei Revtov):
* change legacy SUN makefile to compile

----- cvs ci ------
Thu Mar 9 2000 17:42:30 CET
sms:
* installing header files to $INCDIR/smapi

----- cvs ci ------
Tue Feb  8 00:07:06 NOVT 2000
max (patch from Alex Bronin 2:5049/36):
* ffind: added _dos_findclose() for watcom

----- cvs ci ------
Fri Feb  4 15:24:13 MSK 2000
Fedor:
+ New MSGTYPE_NOTH for Jam base (need for used ftrack).

----- cvs ci ------
Thu Jan 13 16:52:46 MET 2000
tobi:
- If FTSC date field is empty, it is now calculated from the
  date_written time stampe before writing a Mail to the Squish base.

----- cvs ci ------
Tue Jan 11 01:50:40 NOVT 2000
max (patch from Serguei Revtov):
- fsize() fix

----- cvs ci ------
Sat Jan  8 03:08:22 NOVT 2000
max:
- fsize() fix

----- cvs ci ------
Thu Jan  6 19:51:30 NOVT 2000                                                   
max (patch from Kolya Nesterov):