@@ -36,7 +36,7 @@
 #include <sys/types.h>
 #include <sys/stat.h>
 #else
-#if !defined(__IBMC__) && !defined(MSDOS) && !defined(UNIX) && !defined(__MINGW32__)
+#if !defined(__IBMC__) && !defined(MSDOS) && !defined(UNIX) && !defined(__MINGW32__) && !(defined(_MSC_VER) && (_MSC_VER >= 1200))
 #include <dos.h>
 #endif
 #endif
@@ -176,6 +176,10 @@ int _fast direxist(char *directory)
 #define INCL_DOSFILEMGR
 #include <os2.h>
 #else
+#define WIN32_LEAN_AND_MEAN
+#define NOGDI
+#define NOUSER
+#define NOMSG
 #include <windows.h>
 #endif
 
