@@ -26,7 +26,7 @@
 #include <dir.h>
 #endif
 
-#if !defined( __IBMC__) && !defined(UNIX) && !defined(__MINGW32__)
+#if !defined( __IBMC__) && !defined(UNIX) && !defined(__MINGW32__) && !(defined(_MSC_VER) && (_MSC_VER >= 1200))
 #include <dos.h>
 #endif
 
@@ -82,7 +82,7 @@ FFIND *_fast FFindOpen(char *filespec, unsigned short attribute)
             ff->ff_name[sizeof(ff->ff_name) - 1] = '\0';
         }
 
-#elif defined(_MSC_VER) || defined(__WATCOMC__)
+#elif (defined(_MSC_VER) && (_MSC_VER < 1200)) || defined(__WATCOMC__)
 
         if (_dos_findfirst(filespec, attribute, &(ff->ffbuf)) != 0)
         {
@@ -212,7 +212,7 @@ FFIND *_fast FFindOpen(char *filespec, unsigned short attribute)
             ff = NULL;
         }
 
-#elif defined(__RSXNT__) || defined(__MINGW32__)
+#elif defined(__RSXNT__) || defined(__MINGW32__) || (defined(_MSC_VER) && (_MSC_VER >= 1200))
 
         ff->hDirA = FindFirstFile(filespec, &(ff->InfoBuf));
         ff->attrib_srch = attribute;
@@ -283,7 +283,7 @@ int _fast FFindNext(FFIND * ff)
         memcpy(ff->ff_name, ff->ffbuf.ff_name, sizeof(ff->ff_name));
         ff->ff_name[sizeof(ff->ff_name) - 1] = '\0';
 
-#elif defined(_MSC_VER) || defined(__WATCOMC__)
+#elif (defined(_MSC_VER) && (_MSC_VER < 1200)) || defined(__WATCOMC__)
 
         rc = _dos_findnext(&(ff->ffbuf));
 
@@ -353,7 +353,7 @@ int _fast FFindNext(FFIND * ff)
             strcat(ff->ff_name, ff->info.fib_FileName);
             rc = 0;
         }
-#elif defined(__RSXNT__) || defined(__MINGW32__)
+#elif defined(__RSXNT__) || defined(__MINGW32__) || (defined(_MSC_VER) && (_MSC_VER >= 1200))
 
         do
         {
@@ -412,7 +412,7 @@ void _fast FFindClose(FFIND * ff)
     if (ff != NULL)
     {
 #if defined(__TURBOC__) || defined(__DJGPP__)
-#elif defined(__WATCOMC__) || (defined(_MSC_VER) && !defined(MSDOS))
+#elif (defined(__WATCOMC__) && defined (__NT__)) || (defined(_MSC_VER) && (_MSC_VER < 1200) && !defined(MSDOS))
         _dos_findclose(&(ff->ffbuf));
 #elif defined(OS2)
         if (ff->hdir)
@@ -425,7 +425,7 @@ void _fast FFindClose(FFIND * ff)
             closedir(ff->dir);
         }
 #elif defined(SASC)
-#elif defined(__RSXNT__) || defined(__MINGW32__)
+#elif defined(__RSXNT__) || defined(__MINGW32__) || (defined(_MSC_VER) && (_MSC_VER >= 1200))
         if (ff->hDirA != INVALID_HANDLE_VALUE)
         {
             FindClose(ff->hDirA);
