@@ -39,7 +39,7 @@
 
 #endif /* defined(__FARDATA__) */
 
-#if defined(_MSC_VER)
+#if defined(_MSC_VER) && (_MSC_VER < 1200)
 
 #ifndef ZREE
 
